<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Federico Iosue (federico.iosue@gmail.com)
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/detail_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:background="@color/gray_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_half"
        android:paddingRight="@dimen/padding_half" >

        <LinearLayout
            android:id="@+id/detail_tile_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_card"
            android:paddingBottom="2dp" >

            <LinearLayout
                android:id="@+id/title_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <View
                    android:id="@+id/tag_marker"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:background="@null" />

<!--                 <com.neopixl.pixlui.components.edittext.EditText -->
<!--                     android:id="@+id/detail_title" -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:background="@null" -->
<!--                     android:hint="@string/title" -->
<!--                     android:inputType="textCapSentences" -->
<!--                     android:linksClickable="false" -->
<!--                     android:paddingBottom="12dp" -->
<!--                     android:paddingStart="6dp" -->
<!--                     android:paddingLeft="6dp" -->
<!--                     android:paddingEnd="16dp" -->
<!--                     android:paddingRight="16dp" -->
<!--                     android:paddingTop="12dp" -->
<!--                     android:textAppearance="@style/Text.Big" -->
<!--                     android:textColor="@color/actionbar_title_text" -->
<!--                     pixlui:typeface="RobotoSlab-Bold.ttf" /> -->

                <com.neopixl.pixlui.components.edittext.EditText
                    android:id="@+id/detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/title"
                    android:inputType="textCapSentences"
                    android:linksClickable="false"
                    android:paddingBottom="12dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="16dp"
                    android:paddingTop="12dp"
                    android:textAppearance="@style/Text.Big"
                    android:textColor="@color/actionbar_title_text"
                    pixlui:typeface="RobotoSlab-Bold.ttf" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_content_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_card"
            android:paddingBottom="2dp" >

            <ScrollView
                android:id="@+id/content_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_half"
                android:paddingRight="@dimen/padding_half"
                android:scrollbarSize="4dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@drawable/scroll_bar" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <it.feio.android.omninotes.models.views.ExpandableHeightGridView
                        android:id="@+id/gridview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_half"
                        android:drawSelectorOnTop="true"
                        android:listSelector="@drawable/icon_selector"
                        android:numColumns="2"
                        android:stretchMode="columnWidth" />

                    <com.neopixl.pixlui.components.textview.TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/icon_selector"
                        android:freezesText="true"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textColor="@color/location_text"
                        android:textSize="12sp"
                        android:visibility="gone"
                        pixlui:typeface="Roboto-Regular.ttf" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_half" >

                        <com.neopixl.pixlui.components.edittext.EditText
                            android:id="@+id/detail_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:background="@null"
                            android:hint="@string/content"
                            android:inputType="textCapSentences|textMultiLine"
                            android:linksClickable="false"
                            android:textAppearance="@style/Text.Big"
                            android:textColor="@color/actionbar_title_text"
                            pixlui:typeface="RobotoSlab-Regular.ttf" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/reminder_layout"
                       	android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/icon_selector"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/reminder"
                        	android:layout_height="25dp"
                            android:layout_width="25dp"
                            android:contentDescription="@string/reminder"
                            android:src="@drawable/ic_reminder_dark" />

                        <com.neopixl.pixlui.components.textview.TextView
                            android:id="@+id/datetime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:freezesText="true"
                            android:gravity="center_vertical"
                            android:hint="@string/add_reminder"
                            android:textAppearance="@style/Text.Small"
                            pixlui:typeface="Roboto-Regular.ttf" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_timestamps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp" >

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/creation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|start"
                android:padding="0dp"
                android:textAppearance="@style/Text.Small"
                pixlui:typeface="Roboto-Regular.ttf" />

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/last_modification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="0dp"
                android:textAppearance="@style/Text.Small"
                pixlui:typeface="Roboto-Regular.ttf" />
        </LinearLayout>
    </LinearLayout>

    <!-- <View -->
    <!-- android:id="@+id/keyboard_placeholder" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="0dp" > -->
    <!-- </View> -->

</LinearLayout>